--- a/02/02_소율_IP.md
+++ b/02/02_소율_IP.md
@@ -43,7 +43,7 @@
     - **네트워크 ID**: 네트워크 자체 식별
     - **호스트 ID**: 네트워크 내 개별 장치(컴퓨터) 식별
     - **서브넷 마스크**: 네트워크/호스트 영역 구분
-- **클래스 기반 주소 체계 (과거 방식, 현재는 CIDR로 대체)**
+- 네트워크 크기 설명 : **클래스 기반 주소 체계 (과거 방식, 현재는 CIDR로 대체)**
     - 앞은 네트워크 주소 뒤는 호스트 주소로 사용
     - ABC = 1:1 통신, 가장 왼쪽 비트는 구분 비트, 마지막 주소는 브로드캐스트용 주소(네트워크에 속해있는 모든 컴퓨터에 데이터 보낼때 사용)
     - A : 네트워크 8비트 + 호스트 24비트 (왼쪽 비트 = 0), 대규모
@@ -86,16 +86,15 @@
 
 ### 🔹 DHCP (Dynamic Host Configuration Protocol)
 
-- **역할**: 장치가 네트워크 접속 시 자동으로 **IP주소·게이트웨이·DNS** 할당,네트워크 관리 프로토콜,
+- **역할**: 장치가 네트워크 접속 시 자동으로 **IP주소·게이트웨이·DNS** 할당,네트워크 관리 프로토콜
 - **장점**
     - 관리 자동화, 주소 재사용 가능, 주소 임대 기간 갱신 가능
     - 유동 IP 지원 → 이동 사용자 환경에 적합
 
----
 
 ### 🔹 NAT (Network Address Translation)
 
-- **역할**: 사설 IP ↔ 공인 IP 변환, 패킷이 라우팅 장치를 통해 전소오디는 동안 패킷 IP주소 정보를 수정하여 다른 주소로 매핑하는 방법
+- **역할**: 사설 IP ↔ 공인 IP 변환, 패킷이 라우팅 장치를 통해 전송되는 동안 패킷 IP주소 정보를 수정하여 다른 주소로 매핑하는 방법
 - **이유**
     - IPv4 주소 부족 해결
     - 여러 장치가 하나의 공인 IP로 인터넷 접속 가능 (예: 가정용 공유기안에 NAT 있음)
