--- a/02/02_상은_네트워크_기기.md
+++ b/02/02_상은_네트워크_기기.md
@@ -162,9 +162,28 @@
 상위 레이어 스위치는 하위 레이어 스위치의 기능을 기본적으로 다 할 수 있다.
 하지만, 실제 사이트 구성 시에는 자신의 주력 기능만 수행하는 것이 일반적이다.
 
-# 참고자료
+# 예상 질문
+- TCP/IP 5계층 구조를 설명해보세요.
+  - 응용 계층: **HTTP**, FTP, SMTP 등 **애플리케이션 수준** 서비스
+  - 전송 계층: 종단 간 신뢰성 있는 전송 제공, **TCP/UDP 프로토콜**이 대표적
+  - 네트워크 계층: **IP 주소 기반** 라우팅
+  - 데이터 링크 계층: 노드 간 신뢰성 있는 전송 제공, **MAC 주소 기반** 프레임 전달
+  - 물리 계층: 실제 전기 신호로 **물리적 전송**
+- 스위치는 왜 여러 계층에서 언급되나요?
+  - 스위치는 말 그대로 패킷을 어느 쪽으로 보내야 하는지 판단하는데, **어떤 정보를 보고 판단하는 것**인지에 따라 기준이 달라지기 때문입니다.
+- 허브(Hub), 스위치(Switch), 라우터(Router)의 차이를 설명해보세요
+  - 허브: 모든 포트로 전송하는 물리 계층 장비
+  - 스위치: MAC 기반으로 전달하는 데이터 링크 계층 장비
+  - 라우터: IP 기반으로 라우팅을 하는 네트워크 계층 계층 장비
+- 로드밸런싱(Load Balancing)이란 무엇이며, L4와 L7 스위치의 차이는 무엇인가요?
+  - 로드 밸런싱이란 **여러 서버로 트래픽을 분산**시켜 성능과 가용성을 향상시키는 기술
+  - L4는 전송 계층에서 다루는 **TCP/UDP 포트 기반**으로 분산을 합니다.
+  - L7은 **애플리케이션 데이터 기반**으로 분산을 수행하고, 추가적으로 **보안 기능** 또한 설정할 수 있습니다.
+- Hop, Next-Hop이란 무엇인가요?
+  - Hop은 **패킷이 거쳐가는 라우터**를 주로 의미합니다. 홉 수는 거리를 의미합니다.
+  - Next Hop은 목적지까지 가기 위해 **다음에 거칠 예정인 라우터**를 의미합니다.
 
----
+# 참고자료
 
 https://gaebom.tistory.com/62
 
