--- a/03/03_소율_컴퓨터구조와 메모리.md
+++ b/03/03_소율_컴퓨터구조와 메모리.md
@@ -119,7 +119,7 @@
     - 가상 주소: 가상적으로 주어진 주소
     - 가상 주소는 메모리 관리 장치MMU의해 실제주소로 변환
     - TLB: 메모리와 CPU사이 주소 변환위한 캐시
-- 스와핑: 가상 메모리에는 존재하지만 RAM에 없는 데이터일 경우 페이지 폴트 발생 → 메모리에서 지금 사용하지 않는 영역을 하드디스크로 옮겼다가 필요할 때 하드디스크의 일부분을 불러와 씀
+- 스와핑: 가상 메모리에는 존재하지만 RAM에 없는 데이터일 경우 페이지 폴트 발생 → 메모리에서 지금 사용하지 않는 영역을 하드디스크로 옮기고 필요한 영역은 하드디스크에서 불러와 씀
     - 페이지 폴트: 프로세스의 주소공간에는 존재하지만 RAM에 없는 데이터에 접근했을 경우 발생
     - 페이지: 가상 메모리를 사용하는 최소 크기 단위
     - 프레임: 실제 메모리를 사용하는 최소 크기 단위
@@ -131,12 +131,12 @@
             - 외부 단편화: 메모리를 나눈 크기보다 프로그램이 커서 들어가지 못하는 공간이 발생
             - 홀: 할당할 수 있는 비어있는 메모리 공간
     - 불연속 할당: 현대 OS쓰는 방법
-        - 페이징: 동일한 크기의 페이지 단위로 나눠 메모리의 서로 다른 위치에 프로세스를 할당
+        - 페이징: 동일한 크기의 페이지 단위로 나눠 메모리의 서로 다른 위치에 프로세스를 할당, 내부 단편화 발생 가능성 존재
         - 세그멘테이션:
             - 프로세스를 논리적 내용으로 나눠 메모리에 배치
-            - 각 세그먼트의 크기는 동일하지 않음
+            - 각 세그먼트의 크기는 동일하지 않아 외부 단편화가 발생할 수 있습니다.
             - 보호와 공유가 효율적
-        - 페이지드 세그멘테이션: 페이징+세그멘테이션, 세그먼트를 페이징 기법으로 나누는 것, CPU안 세그먼트 테이블에서, 페이지 테이블에서 주소변환을 각각 해야하는 단점 존재
+        - 페이지드 세그멘테이션: 페이징+세그멘테이션, 세그먼트를 페이징 기법으로 나누는 것, 외부 단편화 해결, 보호와 공유가 효율적, CPU안 세그먼트 테이블에서, 페이지 테이블에서 주소변환을 각각 해야하는 단점 존재
 ## 예상질문
 Q1. 폰 노이만 구조란 무엇인가요?
 A1. CPU, 메모리, 입출력 장치가 하나의 버스로 연결된 구조입니다. 프로그램은 반드시 메모리에 올라와야 실행할 수 있으며, 메모리가 유일한 작업 공간이 되기 때문에 메모리 관리가 매우 중요합니다.
