--- a/03/03_소율_컴퓨터구조와 메모리.md
+++ b/03/03_소율_컴퓨터구조와 메모리.md
@@ -88,7 +88,7 @@
     - Cache Hit: 원하는 데이터 캐시에 존재
     - Cache Miss: 데이터가 없어 메모리 접근
     - 캐시 적중률: 캐시 히트 비율, 일반적으로 90%
-    - L1 캐시(특수 캐시): CPU 레지스터에 연결, 명령/데이터 분리 가능 (가장 빠름)
+    - L1 캐시(특수 캐시): CPU 레지스터에 연결, 명령/데이터 분리 가능
     - L2 캐시(일반 캐시): 메모리와 연결, 모든 자료 갖고옴
 - **쓰기 정책**
     - 즉시 쓰기: 캐시 갱신 시 메모리 즉시 반영 → 안전, 성능 느림
