--- a/04/04_소율_프로세스와 스레드.md
+++ b/04/04_소율_프로세스와 스레드.md
@@ -6,16 +6,17 @@
 
 ### 빌드 과정
 
-- **전처리(Preprocessing)**: 주석 제거, 헤더파일 병합, 매크로 치환.
-- **컴파일(Compile)**: 오류 처리·코드 최적화 후 **어셈블리어** 생성.
-- **어셈블(Assemble)**: 어셈블리어 → **목적 코드(obj)**.
-- **링크(Link)**: 프로그램 내 라이브러리 함수 또는 다른 파일들과 목적 코드를 결합 → **실행 파일** 생성.
+- **전처리**: 주석 제거, 헤더파일 병합, 매크로 치환.
+- **컴파일러**: 오류 처리·코드 최적화 후 **어셈블리어** 생성.
+- **어셈블러**: 어셈블리어 → **목적 코드(obj)**.
+- **링커**: 프로그램 내 라이브러리 함수 또는 다른 파일들과 목적 코드를 결합 → **실행 파일** 생성.
     - **정적 라이브러리**
         - 라이브러리 코드가 실행 파일에 **붙는 방식**
         - 장점: 외부의존도가 낮다
         - 단점: 메모리 효율성이 떨어진다
     - **동적 라이브러리(DLL/so)**
         - 실행 시 **필요할 때** DLL함수 정보를 통해 참조하여 라이브러리 사용
+        - cf)DLL: 프로그램 실행 중 필요한 코드를 동적으로 로드하고 사용할수있게 해주는 파일 형식
         - 장점: 메모리 효율↑
         - 단점: 외부 의존성↑
 
@@ -43,7 +44,7 @@ CPU스케줄링의 대상이 되는 작업
 - 대기 중단
     - 메모리 부족으로 일시 중단
 - 실행
-    - CPU소유권과 메모리를 할당 받고 인스트럭션을 수행중인 상태를 의미
+    - CPU소유권과 메모리를 할당 받고 인스트럭션(CPU가 실행할 수 있는 기본 명령 단위)을 수행중인 상태를 의미
     - CPU burst가 일어났다고 표현
 - 중단
     - 이벤트가 발생 후 기다리며 프로세스가 차단된 상태
@@ -55,7 +56,7 @@ CPU스케줄링의 대상이 되는 작업
     - 종료는 자연스럽게 종료되는것 혹은 부모 프로세스가 자식 프로세스를 강제 시키는 비자발적 종료도 있음.
     - 자식 프로세스에 할당된 자원의 한계치를 넘어서거나 부모프로세스가 종료되거나 사용자가 명령어로 프로세스 종료할 때 발생
 
-## 4. 프로세스 상태(State) & 전이
+## 4. 프로세스 상태 전이
 <img width="542" height="210" alt="Image" src="https://github.com/user-attachments/assets/74d318c1-959c-4fb6-886c-51df63e28652" />
 
 1. **Admitted**: New → Ready 프로세스 생성 승인 받음
@@ -69,10 +70,10 @@ CPU스케줄링의 대상이 되는 작업
 <img width="471" height="708" alt="Image" src="https://github.com/user-attachments/assets/6361982f-e448-44a2-88d3-ccc8bcddb403" />
 - 데이터 영역과 코드 영역
     - 정적 할당 영역 : 컴파일 단계에서 메모리를 할당하는 것
-    - **Text(Code)**: 기계어 코드.
     - **Data**: BSS segment, Data segment, code/text segment로 나눠져 저장
         - **BSS**: **0 또는 미초기화 전역/정적 변수**.
         - Data: **0 이 아닌 초기화된 변수 또는 정적 변수**.
+        - **Text(Code)**: 기계어 코드.
 - 스택과 힙
     - 동적 할당 영역: 런타임 단계에서 메모리 할당 받음
     - **Heap**: 동적으로 할당되는 변수 담음. 동적으로 관리되는 자료구조 경우 힙 영역 사용
@@ -83,7 +84,8 @@ CPU스케줄링의 대상이 되는 작업
 ## 6. PCB(Process Control Block)
 
 - 프로세스 제어 블록
-- 컨텍스트 스위칭할 때 프로세스 상태를 저장해둬야 다음에 작업을 이어서할수있음이를 위해, PCB는 프로세스 스케줄링을 위해 프로세스에 관한 모든 정보 저장하는 임시 저장소
+- 컨텍스트 스위칭할 때 프로세스 상태를 저장해둬야 다음에 작업을 이어서할수있음
+- 이를 위해, PCB는 프로세스 스케줄링을 위해 프로세스에 관한 모든 정보 저장하는 임시 저장소
 - 프로세스의 중요한 정보를 포함하고 있어 일반 사용자가 접근하지 못하도록 커널스택의 가장 앞부분에서 관리
 - 이 정보로 프로세스의 상태를 파악하고 우선순위를 조정하며 스케줄링 수행하고 다른 프로세스와 동기화 제어
 - **종료**: 프로세스가 끝나면 PCB 폐기
@@ -93,7 +95,7 @@ CPU스케줄링의 대상이 되는 작업
     - 프로세스 스케줄링 상태: 프로세스의 상태(생성 준비 실행 대기 종료)
     - 프로세스 ID(PID): 프로세스 ID, 해당 프로세스의 자식 프로세스 ID, 프로세스 구분하는 구분자
     - 메모리 관련 정보: 메모리의 위치 정보, 메모리 보호를 위한 경계/한계레지스터
-    - 프로세스 권한: 컴퓨터 자원 또는 IO디바이스에 대한 권한 정보
+    - 프로세스 권한: 컴퓨터 자원 또는 I/O디바이스에 대한 권한 정보
     - 프로그램 카운터: 프로세스에서 실행해야할 다음 명령어의 주소에 대한 포인터
     - CPU레지스터: 프로세스를 실행하기 위해 저장해야할 레지스터에 대한 정보
     - CPU스케줄링 정보: CPU스케줄러에 의해 중단된 시간 등에 대한 정보
@@ -106,7 +108,7 @@ CPU스케줄링의 대상이 되는 작업
 - **정의**
     - PCB기반 프로세스의 상태를 저장하고 로드 시키는 과정
     - 한 프로세스에 할당된 시간이 끝나거나 인터럽트에 의해 발생
-    - 실행되고 있는 프로세스는 한개이며 많은 프로세스가 동시에 운영되는 것처럼 보이는 건 다른 프로세스와 컨텍스트 스위칭이 아주 빠른 속도록 실행되기 때문
+    - 실행되고 있는 프로세스는 한개이며 많은 프로세스가 동시에 운영되는 것처럼 보이는 건 다른 프로세스와 컨텍스트 스위칭이 아주 빠른 속도로 실행되기 때문
 - 컨택스트 스위칭이 발생할 때 유휴시간이 발생(오버헤드)
     - PCB저장 및 복원 비용
     - 프로세스 자체가 교체되니 CPU캐시 메모리에 저장된 데이터가 무효화됨.
@@ -231,7 +233,7 @@ PCB보다 가볍다.
         - 간단한 정수 값과 wait(P함수-자신의 차례올때까지 기다리는 함수), signal(V함수-다음 프로세스로 순서를 넘겨주는 함수)로 경유자원에 대한 접근 처리
         - 공유 자원에 접근하면 세마포어에서 wait작업→공유자원해제하면 signal수행
         - 임계의 스레드에 여러 스레드 들어감
-        - 바이너리 세마포어:0/1, 뮤텍스는 바이너리 세미포어라고 할 수있지만 잠금기반으로 상호 배제일어나는 잠금 메커니즘이고 세마포어는 신호 기반 상호배제가 일어나는 신호 메커니즘
+        - 바이너리 세마포어:0/1, 뮤텍스는 바이너리 세미포어라고 할 수있지만 상호 배제가 일어나는 잠금 메커니즘이고 세마포어는 신호 기반 상호배제가 일어나는 신호 메커니즘
         - 카운팅 세마포어: 여러 값을 가질 수있는 세마포어, 여러 자원에 대한 접근을 제어하는데 사용
     - **모니터**
         - 둘 이상의 스레드나 프로세스가 공유 자원에 안전하게 접근할 수 있도록 공유 자원을 숨기고 해당 접근에 대해 인터페이스만 제공
