--- a/05/05_상은_데이터베이스의_개념적_구성_요소_및_관계_데이터_모델.md
+++ b/05/05_상은_데이터베이스의_개념적_구성_요소_및_관계_데이터_모델.md
@@ -97,8 +97,7 @@
 | SMALLINT | 작은 범위의 정수 | 2 bytes | -32768 ~ +32767 |
 | INTEGER | 일반적인 정수 | 4 bytes | -2147483648 ~ +2147483647 |
 | BIGINT | 큰 범위의 정수 | 8 bytes | -9223372036854775808 ~ +9223372036854775807 |
-| DECIMAL/NUMERIC | 사용자 지정 정밀도, 정확도 | variable (가변) | 소수점 이전 최대 131072자리,
-소수점 이후 최대 16383자리 |
+| DECIMAL/NUMERIC | 사용자 지정 정밀도, 정확도 | variable (가변) | 소수점 이전 최대 131072자리, 소수점 이후 최대 16383자리 |
 | REAL | 가변적인 변수 | 4 bytes | 소수점 아래 6자리 정밀도 |
 | DOUBLE PRECISION | 가변적인 변수 | 8 bytes | 소수점 아래 15자리 정밀도 |
 | SMALLSERIAL | 작은 범위의 자동 증가 정수 | 2 bytes | 1 ~ 32767 |
