--- a/05/05_소율_데이터베이스_기본개념.md
+++ b/05/05_소율_데이터베이스_기본개념.md
@@ -14,7 +14,7 @@
     - 관계형 DB에서는 **테이블**, NoSQL에서는 **컬렉션**.
 - 구조:
     - 관계형 DB: `레코드(Row, 튜플) → 테이블 → 데이터베이스`
-    - NoSQL: `도큐먼트(Document) → 컬렉션 → 데이터베이스`
+    - 도큐먼트 DB: `도큐먼트(Document) → 컬렉션 → 데이터베이스`
 ## 3) 속성(Attribute) & 데이터 타입
 
 - **속성**: 엔티티가 가진 개별 특성, 고유 이름을 갖는 정보, 필드와 타입을 가짐
